--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.DesafioPractico3"
         tools:targetApi="31">
         <activity
-            android:name=".AgregarListasDeCompras"
+            android:name="HR152213.desafiopractico3.agregarProductos"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="HR152213.desafiopractico3.AgregarListasDeCompras"
+            android:exported="false" />
+        <activity
+            android:name="HR152213.desafiopractico3.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
