--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.DesafioPractico3"
         tools:targetApi="31">
         <activity
+            android:name="HR152213.desafiopractico3.actualizarListaCompras"
+            android:exported="false" />
+        <activity
             android:name="HR152213.desafiopractico3.agregarProductos"
             android:exported="false" />
         <activity
